--- a/css/style.css
+++ b/css/style.css
@@ -1321,6 +1321,10 @@ footer {
         width: 67px;
     }
 
+    .navbar-brand img {
+        width: 67px;
+    }
+
     footer {
         padding: 20px 0;
     }
