--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,8 @@ body {
 
 .header-badge {
     margin-left: 20px;
+    width: 60px;
+    height: 60px;
 }
 
 .navbar-brand {
@@ -126,6 +128,8 @@ body {
 
 .navbar-brand img {
     max-width: 100%;
+    width: 140px;
+    height: 50px;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
@@ -685,6 +689,8 @@ footer {
 
 .footer-logo {
     margin-bottom: 20px;
+    width: 100px;
+    height: 35px;
 }
 
 .footer__caption {
